--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@emotion/css": "^11.10.6",
@@ -52,6 +53,7 @@
     "@types/node": "18.11.2",
     "@types/react": "18.0.2",
     "@types/react-dom": "18.0.6",
+    "cypress": "^12.9.0",
     "eslint": "8.25.0",
     "eslint-config-next": "^13.2.3",
     "jest": "^29.5.0",
