--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "nodemon --exec npx ts-node --files ./index.ts"
+    "start": "nodemon --exec npx ts-node -r tsconfig-paths/register --files ./index.ts"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +21,9 @@
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "save": "^2.9.0",
+    "tsyringe": "^4.7.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -31,6 +33,8 @@
     "@types/node": "^18.11.17",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
+    "reflect-metadata": "^0.1.13",
+    "tsconfig-paths": "^4.2.0",
     "tslint": "^6.1.3",
     "typescript": "^4.9.4"
   }
