--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "google-auth-library": "^8.7.0",
     "googleapis": "^111.0.0",
     "http-status-codes": "^2.2.0",
+    "joi": "^17.9.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
     "morgan": "^1.10.0",
