--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,9 @@
     "google-auth-library": "^8.7.0",
     "googleapis": "^111.0.0",
     "http-status-codes": "^2.2.0",
+    "i18next": "^22.4.15",
+    "i18next-fs-backend": "^2.1.1",
+    "i18next-http-middleware": "^3.3.0",
     "joi": "^17.9.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
