--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "next-i18next": "^13.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hotkeys-hook": "^4.4.0",
     "react-i18next": "^12.2.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-popper": "^2.3.0",
