--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-resources-to-backend": "^1.1.2",
     "import": "^0.0.6",
+    "jalali-moment": "^3.3.11",
     "jwt-decode": "^3.1.2",
     "mdi-material-ui": "^7.6.0",
     "next": "^13.2.3",
