--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "accept-language": "^3.0.18",
     "axios": "^1.1.3",
     "babel-plugin-styled-components": "^2.0.7",
+    "draft-js": "^0.11.7",
     "formik": "^2.2.9",
     "i18next": "^22.4.11",
     "i18next-browser-languagedetector": "^7.0.1",
@@ -36,6 +37,7 @@
     "next-i18next": "^13.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hotkeys-hook": "^4.4.0",
     "react-i18next": "^12.2.0",
     "react-perfect-scrollbar": "^1.5.8",
@@ -55,6 +57,7 @@
     "@types/node": "18.11.2",
     "@types/react": "18.0.2",
     "@types/react-dom": "18.0.6",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "cypress": "^12.9.0",
     "eslint": "8.25.0",
     "eslint-config-next": "^13.2.3",
