--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^38.1.1",
+    "@ckeditor/ckeditor5-react": "^6.1.0",
     "@emotion/css": "^11.10.6",
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
@@ -24,7 +26,6 @@
     "accept-language": "^3.0.18",
     "axios": "^1.1.3",
     "babel-plugin-styled-components": "^2.0.7",
-    "draft-js": "^0.11.7",
     "formik": "^2.2.9",
     "i18next": "^22.4.11",
     "i18next-browser-languagedetector": "^7.0.1",
@@ -37,7 +38,6 @@
     "next-i18next": "^13.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-draft-wysiwyg": "^1.15.0",
     "react-hotkeys-hook": "^4.4.0",
     "react-i18next": "^12.2.0",
     "react-perfect-scrollbar": "^1.5.8",
