--- a/client/package.json
+++ b/client/package.json
@@ -21,11 +21,14 @@
     "@mui/lab": "^5.0.0-alpha.124",
     "@mui/material": "^5.10.10",
     "@mui/x-data-grid": "^6.6.0",
+    "@mui/x-date-pickers": "^6.10.0",
     "@react-oauth/google": "^0.7.0",
     "@reduxjs/toolkit": "^1.9.2",
     "accept-language": "^3.0.18",
     "axios": "^1.1.3",
     "babel-plugin-styled-components": "^2.0.7",
+    "date-fns": "^2.30.0",
+    "date-fns-jalali": "^2.13.0-0",
     "formik": "^2.2.9",
     "i18next": "^22.4.11",
     "i18next-browser-languagedetector": "^7.0.1",
