--- a/client/package.json
+++ b/client/package.json
@@ -39,17 +39,21 @@
     "mdi-material-ui": "^7.6.0",
     "next": "^13.2.3",
     "next-i18next": "^13.2.2",
+    "next-share": "^0.24.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hotkeys-hook": "^4.4.0",
     "react-i18next": "^12.2.0",
+    "react-markdown": "^8.0.7",
     "react-perfect-scrollbar": "^1.5.8",
     "react-popper": "^2.3.0",
     "react-redux": "^8.0.5",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
+    "sass": "^1.64.0",
     "styled-components": "^5.3.9",
     "tss-react": "^4.6.0",
     "yup": "^0.32.11"
@@ -61,6 +65,7 @@
     "@types/react": "18.0.2",
     "@types/react-dom": "18.0.6",
     "@types/react-draft-wysiwyg": "^1.13.4",
+    "@types/react-slick": "^0.23.10",
     "cypress": "^12.9.0",
     "eslint": "8.25.0",
     "eslint-config-next": "^13.2.3",
