--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^2.30.0",
     "date-fns-jalali": "^2.13.0-0",
     "formik": "^2.2.9",
+    "html-to-react": "^1.6.0",
     "i18next": "^22.4.11",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-resources-to-backend": "^1.1.2",
