--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "import": "^0.0.6",
     "jalali-moment": "^3.3.11",
     "jwt-decode": "^3.1.2",
+    "lightgallery": "^2.7.1",
     "mdi-material-ui": "^7.6.0",
     "next": "^13.2.3",
     "next-i18next": "^13.2.2",
