--- a/client/DockerFile
+++ b/client/DockerFile
@@ -1,12 +1,13 @@
 FROM node:latest
 
-RUN mkdir /root/app/
-WORKDIR /root/app
+WORKDIR /usr/src/app
 
-COPY . /root/app
+COPY package*.json ./
 
 RUN npm install
 
+COPY . .
+
 EXPOSE 3000
 
-CMD npm run start
+CMD ["npm", "start"]
